--- a/WpfApp3/FractionForm.xaml
+++ b/WpfApp3/FractionForm.xaml
@@ -15,9 +15,12 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="DivPart" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" TextAlignment="Right" VerticalAlignment="Center" FontSize="16"/>
-        <TextBox x:Name="Devider" Grid.Row="0" Grid.Column="1" VerticalAlignment="Bottom" FontSize="16" TextAlignment="Center"/>
-        <TextBox x:Name="Denominator" Grid.Row="2" Grid.Column="1" VerticalAlignment="Top" FontSize="16" TextAlignment="Center"/>
+        <TextBox x:Name="DivPart" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
+                 TextAlignment="Right" VerticalAlignment="Center" FontSize="16" MaxLength="16" KeyDown="TextBox_InputFilter"/>
+        <TextBox x:Name="Devider" Grid.Row="0" Grid.Column="1" 
+                 VerticalAlignment="Bottom" FontSize="16" TextAlignment="Center" MaxLength="16" KeyDown="TextBox_InputFilter"/>
+        <TextBox x:Name="Denominator" Grid.Row="2" Grid.Column="1" 
+                 VerticalAlignment="Top" FontSize="16" TextAlignment="Center" MaxLength="16" KeyDown="TextBox_InputFilter"/>
         <Rectangle Grid.Row="2" Grid.Column="2" Height="2" VerticalAlignment="Top" Fill="Black" />
     </Grid>
 </UserControl>
