--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp3"
         mc:Ignorable="d"
         Title="MainWindow" Height="480" Width="640">
-    <Grid>
+    <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -23,18 +23,20 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <local:FractionForm x:Name="Fraction1" Grid.Row="1" Grid.Column="1"/>
+        <local:FractionForm x:Name="_FirstForm" Grid.Row="1" Grid.Column="1"/>
+        <local:SignForm x:Name="_SignForm" Grid.Row="1" Grid.Column="2"/>
 
         <Button x:Name="Reset" Grid.Row="2" Grid.Column="0" Content="Reset" FontSize="16" FontWeight="Bold" Click="Reset_Click"/>
         <Button x:Name="Cancel" Grid.Row="2" Grid.Column="1" Content="Cancel" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Plus" Grid.Row="3" Grid.Column="0" Content="+" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Minus" Grid.Row="4" Grid.Column="0" Content="-" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Multiplication" Grid.Row="3" Grid.Column="1" Content="*" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Divide" Grid.Row="4" Grid.Column="1" Content="/" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Exponentiation" Grid.Row="5" Grid.Column="0" Content="x^n" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="Plus" Grid.Row="3" Grid.Column="0" Content="+" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
+        <Button x:Name="Minus" Grid.Row="4" Grid.Column="0" Content="-" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
+        <Button x:Name="Multiplication" Grid.Row="3" Grid.Column="1" Content="*" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
+        <Button x:Name="Divide" Grid.Row="4" Grid.Column="1" Content="/" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
+        <Button x:Name="Exponentiation" Grid.Row="5" Grid.Column="0" Content="x^n" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
         <Button x:Name="Reduction" Grid.Row="5" Grid.Column="1" Content="Sokrashenie" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="Exchange" Grid.Row="3" Grid.Column="2" Content="Obmen" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="ChangeSign" Grid.Row="4" Grid.Column="2" Content="+/-" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="Equal" Grid.Row="5" Grid.Column="2" Content="=" FontSize="16" FontWeight="Bold"/>
 
         <Button x:Name="B1" Grid.Row="3" Grid.Column="3" Content="1" FontSize="16" FontWeight="Bold" Focusable="False" Click="Num_Click"/>
         <Button x:Name="B2" Grid.Row="3" Grid.Column="4" Content="2" FontSize="16" FontWeight="Bold" Focusable="False" Click="Num_Click"/>
