--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -25,7 +25,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <local:FractionForm x:Name="_FirstForm" Grid.Row="1" Grid.Column="2"/>
+        <local:FractionForm x:Name="_SecondForm" Grid.Row="1" Grid.Column="4"/>
         <local:SignForm x:Name="_SignForm" Grid.Row="1" Grid.Column="3"/>
+
+        <local:FractionForm x:Name="_ResultForm" Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2"/>
 
         <Border x:Name="ResultBorder" Grid.Row="2" Grid.ColumnSpan="6" BorderThickness="1" BorderBrush="Black" Margin="-1"/>
 
