--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -40,11 +40,11 @@
         <Button x:Name="Minus" Grid.Row="6" Grid.Column="0" Content="-" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
         <Button x:Name="Multiplication" Grid.Row="5" Grid.Column="1" Content="*" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
         <Button x:Name="Divide" Grid.Row="6" Grid.Column="1" Content="/" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
-        <Button x:Name="Exponentiation" Grid.Row="4" Grid.Column="0" Content="x^n" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
+        <Button x:Name="Exponentiation" Grid.Row="4" Grid.Column="0" Content="x^n" FontSize="16" FontWeight="Bold" Click="Exp_Click"/>
         <Button x:Name="Reduction" Grid.Row="4" Grid.Column="1" Content="Sokrashenie" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="Exchange" Grid.Row="4" Grid.Column="2" Content="Obmen" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="ChangeSign" Grid.Row="5" Grid.Column="2" Content="+/-" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="Equal" Grid.Row="6" Grid.Column="2" Content="=" FontSize="16" FontWeight="Bold" Click="Equal_Click"/>
+        <Button x:Name="Equal" Grid.Row="6" Grid.Column="2" Content="=" FontSize="16" FontWeight="Bold"/>
 
         <Button x:Name="B1" Grid.Row="4" Grid.Column="3" Content="1" FontSize="16" FontWeight="Bold" Focusable="False" Click="Num_Click"/>
         <Button x:Name="B2" Grid.Row="4" Grid.Column="4" Content="2" FontSize="16" FontWeight="Bold" Focusable="False" Click="Num_Click"/>
