--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -35,7 +35,7 @@
         <local:SignForm x:Name="EqualForm" Grid.Row="2" Grid.Column="3"/>
 
         <Button x:Name="Reset" Grid.Row="3" Grid.Column="0" Content="Reset" FontSize="16" FontWeight="Bold" Click="Reset_Click"/>
-        <Button x:Name="Cancel" Grid.Row="3" Grid.Column="1" Content="Cancel" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="Cancel" Grid.Row="3" Grid.Column="1" Content="Cancel" FontSize="16" FontWeight="Bold" Click="Cancel_Click"/>
         <Button x:Name="Plus" Grid.Row="5" Grid.Column="0" Content="+" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
         <Button x:Name="Minus" Grid.Row="6" Grid.Column="0" Content="-" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
         <Button x:Name="Multiplication" Grid.Row="5" Grid.Column="1" Content="*" FontSize="16" FontWeight="Bold" Click="Sign_Click"/>
