--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -24,8 +24,8 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <local:FractionForm x:Name="_FirstForm" Grid.Row="1" Grid.Column="2"/>
-        <local:FractionForm x:Name="_SecondForm" Grid.Row="1" Grid.Column="4"/>
+        <local:FractionForm x:Name="_FirstForm" Grid.Row="1" Grid.Column="2" Loaded="_FirstForm_Loaded" GotFocus="_FirstForm_GotFocus"/>
+        <local:FractionForm x:Name="_SecondForm" Grid.Row="1" Grid.Column="4" GotFocus="_SecondForm_GotFocus"/>
         <local:SignForm x:Name="_SignForm" Grid.Row="1" Grid.Column="3"/>
 
         <local:FractionForm x:Name="_ResultForm" Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2"/>
